Auch Verzeichnisse werden beim Laden/Speichern angezeigt.